# debugedit

./: .gitignore  Makefile.am  README  configure.ac  upload-release.sh
scripts/: find-debuginfo.in  find-debuginfo.sh
tests/: Makefile.am  atlocal.in  debugedit-classify-ar.at  debugedit.at  find-debuginfo.at  testsuite.at
tests/data/SOURCES/: dupe.c  large.c
tools/: debugedit-classify-ar.c  debugedit.c  sepdebugcrcfix.c
